force-app/main/default/objects/Case/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>LEFT(Program_Project_ID__r.Name, 6)+ Account.Program_Code__c + RIGHT(TEXT(YEAR(TODAY())), 2) + Right(CaseNumber, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>