force-app/main/default/objects/Case/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Needed</fullName>
            </value>
            <value>
                <fullName>Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Invoice Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>