force-app/main/default/objects/Case/fields/Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template</label>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Cases (Invoice Template)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>