force-app/main/default/objects/Case/fields/Invoice_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template_ID__c</fullName>
    <formula>Invoice_Template__r.SDoc_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Template ID</label>
    <type>Text</type>
</CustomField>