force-app/main/default/objects/Case/fields/Is_Citations__c.field-meta.xml
<CustomField>
    <fullName>Is_Citations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Citations</label>
    <type>Checkbox</type>
</CustomField>