force-app/main/default/objects/Case/fields/Is_Qc_Status_Dialog__c.field-meta.xml
<CustomField>
    <fullName>Is_Qc_Status_Dialog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Qc Status Dialog</label>
    <type>Checkbox</type>
</CustomField>