force-app/main/default/objects/Case/fields/Is_this_a_pre_service__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_pre_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a pre-service case?</label>
    <type>Checkbox</type>
</CustomField>