force-app/main/default/objects/Case/fields/Item_Service__c.field-meta.xml
<CustomField>
    <fullName>Item_Service__c</fullName>
    <label>Item/Service</label>
    <length>250</length>
    <type>Text</type>
</CustomField>