force-app/main/default/objects/Case/fields/Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_Date__c</fullName>
    <label>Letter Date</label>
    <type>Date</type>
</CustomField>