force-app/main/default/objects/Case/fields/MCO_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>MCO_File_Uploaded__c</fullName>
    <label>MCO File Uploaded</label>
    <type>DateTime</type>
</CustomField>