force-app/main/default/objects/Case/fields/MDIRO_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>MDIRO_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>