force-app/main/default/objects/Case/fields/MDIRO_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>MDIRO_Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>