force-app/main/default/objects/Case/fields/MDIRO_Status__c.field-meta.xml
<CustomField>
    <fullName>MDIRO_Status__c</fullName>
    <formula>CASE( Status , 
&apos;Draft&apos;, &apos;Draft&apos;, 
&apos;Initiated&apos;, &apos;Pending MCO Case File Upload&apos;,
&apos;Case Preparation&apos;,&apos;In Review&apos;,
&apos;Panel Review&apos;,&apos;In Review&apos;,
&apos;Drafting Decision&apos;,&apos;In Review&apos;,
&apos;QC&apos;,&apos;In Review&apos;,
&apos;Ready to be Closed&apos;,&apos;In Review&apos;,
&apos;Closed/Completed&apos;,&apos;Review Complete&apos;,
&apos;Review Complete&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDIRO Status</label>
    <type>Text</type>
</CustomField>