force-app/main/default/objects/Case/fields/Medical_Director_Hours__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Hours__c</fullName>
    <label>Medical Director Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>