force-app/main/default/objects/Case/fields/Medical_Director_Hours_Comment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Hours_Comment__c</fullName>
    <label>Medical Director Hours Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>