force-app/main/default/objects/Case/fields/Medical_Director_Rate__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Rate__c</fullName>
    <label>Medical Director Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>