force-app/main/default/objects/Case/fields/Medical_Director_Title__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Title__c</fullName>
    <inlineHelpText>The field applies to PA Project</inlineHelpText>
    <label>Medical Director Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>