force-app/main/default/objects/Case/fields/Medical_Director_Total__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Total__c</fullName>
    <formula>IF(ISNULL( Medical_Director_Hours__c ) ,  Medical_Director_Rate__c , Medical_Director_Hours__c  *  Medical_Director_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Director Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>