force-app/main/default/objects/Case/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Name</label>
    <type>Checkbox</type>
</CustomField>