force-app/main/default/objects/Case/fields/Needs_RI__c.field-meta.xml
<CustomField>
    <fullName>Needs_RI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs RI</label>
    <type>Checkbox</type>
</CustomField>