force-app/main/default/objects/Case/fields/No_Inflammatory_Language_Dec__c.field-meta.xml
<CustomField>
    <fullName>No_Inflammatory_Language_Dec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Inflammatory Language</label>
    <type>Checkbox</type>
</CustomField>