force-app/main/default/objects/Case/fields/Notice_Template__c.field-meta.xml
<CustomField>
    <fullName>Notice_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notice Template</label>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Cases (Notice Template)</relationshipLabel>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>