force-app/main/default/objects/Case/fields/Notice_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Notice_Template_ID__c</fullName>
    <formula>Notice_Template__r.SDoc_Template__c</formula>
    <label>Notice Template ID</label>
    <type>Text</type>
</CustomField>