force-app/main/default/objects/Case/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <formula>Program_Priority__r.Number_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>