force-app/main/default/objects/Case/fields/Nurse_Hours__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Hours__c</fullName>
    <label>Nurse Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>