force-app/main/default/objects/Case/fields/Nurse_Hours_Comment__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Hours_Comment__c</fullName>
    <label>Nurse Hours Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>