force-app/main/default/objects/Case/fields/Nurse_Rate__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Rate__c</fullName>
    <label>Nurse Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>