force-app/main/default/objects/Case/fields/Nurse_Total__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Total__c</fullName>
    <formula>IF(ISNULL( Nurse_Hours__c ) ,   Nurse_Rate__c  , Nurse_Hours__c  *  Nurse_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nurse Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>