force-app/main/default/objects/Case/fields/Open_RFI__c.field-meta.xml
<CustomField>
    <fullName>Open_RFI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open RFI</label>
    <type>Checkbox</type>
</CustomField>