force-app/main/default/objects/Case/fields/Open_RFI_f__c.field-meta.xml
<CustomField>
    <fullName>Open_RFI_f__c</fullName>
    <formula>IF( Open_RFI__c , &apos;Waiting for Information&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI</label>
    <type>Text</type>
</CustomField>