force-app/main/default/objects/Case/fields/Original_Due_Date_f__c.field-meta.xml
<CustomField>
    <fullName>Original_Due_Date_f__c</fullName>
    <formula>IF(Program_Priority_Unit__c=&apos;Per Hour&apos;, Clock_Start_Date__c + ((Number_of_Days__c * 60))/1440, Clock_Start_Date__c + Number_of_Days__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Due Date</label>
    <type>DateTime</type>
</CustomField>