force-app/main/default/objects/Case/fields/Other_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Other_Narrative__c</fullName>
    <label>Other Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>