force-app/main/default/objects/Case/fields/Other_Receipients__c.field-meta.xml
<CustomField>
    <fullName>Other_Receipients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Receipients</label>
    <type>Checkbox</type>
</CustomField>