force-app/main/default/objects/Case/fields/Others_Hours__c.field-meta.xml
<CustomField>
    <fullName>Others_Hours__c</fullName>
    <label>Others Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>