force-app/main/default/objects/Case/fields/Others_Hours_Comment__c.field-meta.xml
<CustomField>
    <fullName>Others_Hours_Comment__c</fullName>
    <label>Others Hours Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>