force-app/main/default/objects/Case/fields/Others_Rate__c.field-meta.xml
<CustomField>
    <fullName>Others_Rate__c</fullName>
    <label>Others Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>