force-app/main/default/objects/Case/fields/Others_Total__c.field-meta.xml
<CustomField>
    <fullName>Others_Total__c</fullName>
    <formula>IF(ISNULL( Others_Hours__c ) ,   Others_Rate__c  , Others_Hours__c  *  Others_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Others Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>