force-app/main/default/objects/Case/fields/Overall_Decision__c.field-meta.xml
<CustomField>
    <fullName>Overall_Decision__c</fullName>
    <label>Overall Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>