force-app/main/default/objects/Case/fields/PA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>PA_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>