force-app/main/default/objects/Case/fields/PA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PA_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>