force-app/main/default/objects/Case/fields/Panel_Review__c.field-meta.xml
<CustomField>
    <fullName>Panel_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel Review</label>
    <referenceTo>Panel_Review__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases_del</relationshipName>
    <type>Lookup</type>
</CustomField>