force-app/main/default/objects/Case/fields/Physician_Hours__c.field-meta.xml
<CustomField>
    <fullName>Physician_Hours__c</fullName>
    <label>Physician Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>