force-app/main/default/objects/Case/fields/Physician_Hours_Comment__c.field-meta.xml
<CustomField>
    <fullName>Physician_Hours_Comment__c</fullName>
    <label>Physician Hours Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>