force-app/main/default/objects/Case/fields/Physician_Rate__c.field-meta.xml
<CustomField>
    <fullName>Physician_Rate__c</fullName>
    <label>Physician Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>