force-app/main/default/objects/Case/fields/Physician_Total__c.field-meta.xml
<CustomField>
    <fullName>Physician_Total__c</fullName>
    <formula>IF(ISNULL( Physician_Hours__c ) ,   Physician_Rate__c  , Physician_Hours__c  *  Physician_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>