force-app/main/default/objects/Case/fields/Plan_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Review_Completed_Date__c</fullName>
    <label>Plan Review Completed Date</label>
    <type>Date</type>
</CustomField>