force-app/main/default/objects/Case/fields/Priority_Name__c.field-meta.xml
<CustomField>
    <fullName>Priority_Name__c</fullName>
    <formula>Program_Priority__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Name</label>
    <type>Text</type>
</CustomField>