force-app/main/default/objects/Case/fields/Procedures__c.field-meta.xml
<CustomField>
    <fullName>Procedures__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedures</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program_Review_Type__c.Program_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Program_Review_Type__c.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Procedures</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Cases (Procedures)</relationshipLabel>
    <relationshipName>Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>