force-app/main/default/objects/Case/fields/Program_Acct_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Acct_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Acct ID</label>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Cases (Program Acct ID)</relationshipLabel>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>