force-app/main/default/objects/Case/fields/Program_Appeal_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Appeal_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The field is for Rhode Island Project reporting only</inlineHelpText>
    <label>Coverage Type</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Program_Review_Type__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Coverage Type</value>
        </filterItems>
        <filterItems>
            <field>Program_Review_Type__c.Program_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Cases (Program Appeal Type)</relationshipLabel>
    <relationshipName>AppealType</relationshipName>
    <type>Lookup</type>
</CustomField>