force-app/main/default/objects/Case/fields/Program_Billing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Program_Billing_Fee__c</fullName>
    <label>Program Billing Fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>