force-app/main/default/objects/Case/fields/Program_Case_Type_Queue__c.field-meta.xml
<CustomField>
    <fullName>Program_Case_Type_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The field is for Rhode Island Project reporting only</inlineHelpText>
    <label>Procedures</label>
    <referenceTo>Program_Priority__c</referenceTo>
    <relationshipLabel>Cases (Program Case Type Queue)</relationshipLabel>
    <relationshipName>CaseTypeQueue</relationshipName>
    <type>Lookup</type>
</CustomField>