force-app/main/default/objects/Case/fields/Program_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Org_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Org ID</label>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Cases (Program Org ID)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>