force-app/main/default/objects/Case/fields/Program_Priority__c.field-meta.xml
<CustomField>
    <fullName>Program_Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Priority</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program_Priority__c.Program_Review_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Program_Review_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Priority__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>