force-app/main/default/objects/Case/fields/Program_Priority_Unit__c.field-meta.xml
<CustomField>
    <fullName>Program_Priority_Unit__c</fullName>
    <formula>TEXT(Program_Priority__r.Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Calculated By</label>
    <type>Text</type>
</CustomField>