force-app/main/default/objects/Case/fields/Program_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Project_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Project ID</label>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Cases (Program Project ID)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>