force-app/main/default/objects/Case/fields/Program_Review_Decision__c.field-meta.xml
<CustomField>
    <fullName>Program_Review_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Review Decision</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program_Priority__c.Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Program_Priority__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Review Decision</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Priority__c</referenceTo>
    <relationshipLabel>Cases (Program Review Decision)</relationshipLabel>
    <relationshipName>ReviewDecision</relationshipName>
    <type>Lookup</type>
</CustomField>