force-app/main/default/objects/Case/fields/Program_State__c.field-meta.xml
<CustomField>
    <fullName>Program_State__c</fullName>
    <formula>TEXT(Account.Project_State__c)</formula>
    <label>Program State</label>
    <type>Text</type>
</CustomField>