force-app/main/default/objects/Case/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>State Identifier</description>
    <label>Project Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Id</valueSetName>
    </valueSet>
</CustomField>