force-app/main/default/objects/Case/fields/Project_Director_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Director_Rate__c</fullName>
    <label>Project Director Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>