force-app/main/default/objects/Case/fields/Project_Director_Total__c.field-meta.xml
<CustomField>
    <fullName>Project_Director_Total__c</fullName>
    <formula>IF(ISNULL( Project_Director_Hours__c ) , Project_Director_Rate__c, Project_Director_Hours__c  *  Project_Director_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Director Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>