force-app/main/default/objects/Case/fields/Project_Manager_Hours__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Hours__c</fullName>
    <label>Project Manager Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>