force-app/main/default/objects/Case/fields/Project_Manager_Hours_Comment__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Hours_Comment__c</fullName>
    <label>Project Manager Hours Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>