force-app/main/default/objects/Case/fields/Project_Manager_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Rate__c</fullName>
    <label>Project Manager Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>