force-app/main/default/objects/Case/fields/Project_Manager_Total__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Total__c</fullName>
    <formula>IF(ISNULL(Project_Manager_Hours__c) ,  Project_Manager_Rate__c , Project_Manager_Hours__c  *  Project_Manager_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>