force-app/main/default/objects/Case/fields/Provider_ferp__c.field-meta.xml
<CustomField>
    <fullName>Provider_ferp__c</fullName>
    <label>Provider Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>