force-app/main/default/objects/Case/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acute Hospital</fullName>
            </value>
            <value>
                <fullName>Ambulance</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Chiropractic</fullName>
            </value>
            <value>
                <fullName>ER-Freestanding emergent/urgent care center</fullName>
            </value>
            <value>
                <fullName>ER-Hospital</fullName>
            </value>
            <value>
                <fullName>Home Health Agency</fullName>
            </value>
            <value>
                <fullName>Inpatient-Acute inpatient medical/surgical</fullName>
            </value>
            <value>
                <fullName>Inpatient-Military treatment facility and VA Hospital</fullName>
            </value>
            <value>
                <fullName>Inpatient-Oncology</fullName>
            </value>
            <value>
                <fullName>Inpatient-Psychiatric</fullName>
            </value>
            <value>
                <fullName>Inpatient-Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Inpatient-Substance abuse treatment</fullName>
            </value>
            <value>
                <fullName>Laboratory-Independent Laboratory or Diagnostic Testing Facility</fullName>
            </value>
            <value>
                <fullName>Nursing-Adult Living Facility</fullName>
            </value>
            <value>
                <fullName>Nursing-Custodial Care Facility</fullName>
            </value>
            <value>
                <fullName>Nursing-Intermediate Care Facility</fullName>
            </value>
            <value>
                <fullName>Nursing-SNF</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Inpatient Facility</fullName>
            </value>
            <value>
                <fullName>Outpatient Medical Center</fullName>
            </value>
            <value>
                <fullName>Outpatient-Ambulatory surgical center</fullName>
            </value>
            <value>
                <fullName>Outpatient-Freestanding Clinic</fullName>
            </value>
            <value>
                <fullName>Outpatient-Freestanding emergent/urgent care center</fullName>
            </value>
            <value>
                <fullName>Outpatient-Hospital Outpatient department</fullName>
            </value>
            <value>
                <fullName>Outpatient-Hospital emergency room</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Practitioner</fullName>
            </value>
            <value>
                <fullName>Professional Corp/Proprietorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>