force-app/main/default/objects/Case/fields/QA_Required__c.field-meta.xml
<CustomField>
    <fullName>QA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Required</label>
    <type>Checkbox</type>
</CustomField>