force-app/main/default/objects/Case/fields/QC_Complete__c.field-meta.xml
<CustomField>
    <fullName>QC_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Complete</label>
    <type>Checkbox</type>
</CustomField>