force-app/main/default/objects/Case/fields/QC_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>QC_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QC Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QC_User</relationshipName>
    <type>Lookup</type>
</CustomField>