force-app/main/default/objects/Case/fields/QC_Required__c.field-meta.xml
<CustomField>
    <fullName>QC_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Required</label>
    <type>Checkbox</type>
</CustomField>