force-app/main/default/objects/Case/fields/QC_Status__c.field-meta.xml
<CustomField>
    <fullName>QC_Status__c</fullName>
    <label>QC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for QC</fullName>
            </value>
            <value>
                <fullName>Returned to AO</fullName>
            </value>
            <value>
                <fullName>Ready to Close</fullName>
            </value>
            <value>
                <fullName>Ready for Client Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>