force-app/main/default/objects/Case/fields/QC_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>QC_Sub_Status__c</fullName>
    <formula>IF(TEXT(Status)=&apos;QC&apos;,  TEXT(QC_Status__c) , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QC Sub Status</label>
    <type>Text</type>
</CustomField>