force-app/main/default/objects/Case/fields/Questions_to_Expert__c.field-meta.xml
<CustomField>
    <fullName>Questions_to_Expert__c</fullName>
    <label>Questions to Expert</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>