force-app/main/default/objects/Case/fields/Ready_For_Ack_Letter__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Ack_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready For Ack Letter</label>
    <type>Checkbox</type>
</CustomField>